--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     align-items: center;
 }
 
-.tarjetas {
+.tarjetas, .tarjetas-ataques {
     display: flex;
     gap: 10px;
 }
@@ -43,7 +43,6 @@ body {
 }
 
 .tarjeta-de-mokepon:hover {
-    cursor: pointer;
     background-color: aquamarine;
 }
 
@@ -64,6 +63,10 @@ body {
 
 input {
     display: none;
+}
+
+input:checked + label {
+    background-color: #678983;
 }
 
 #select-ataque {
@@ -100,4 +103,23 @@ input {
     background-color: #678983;
     color: #3C2A21;
     font-family: 'Poppins', sans-serif;
+}
+
+.ataques {
+    color: white;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 100px 100px;
+}
+
+.ataques-jugador, .ataques-enemigo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 360px) {
+    .tarjetas, .tarjetas-ataques {
+        flex-direction: column;
+    }
 }
