--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ input:checked + label {
     box-sizing: border-box;
     border-radius: 20px;
     border-color: transparent;
-    width: 100px;
+    width: 80px;
     color: #3C2A21;
     font-family: 'Poppins', sans-serif;
 }
@@ -120,6 +120,16 @@ input:checked + label {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#ver-mapa {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#mapa {
+    border: 2px solid white;
 }
 
 @media (max-width: 360px) {
